// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render with 1 expense 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling 
  $195.00
</div>
`;

exports[`should correctly render with 2 expenses 1`] = `
<div>
  Viewing 
  2
   
  expenses
   totalling 
  $109,695.00
</div>
`;

exports[`should correctly render with no expenses 1`] = `
<div>
  Viewing 
  0
   
  expenses
   totalling 
  $0.00
</div>
`;
